@@ -7,7 +7,7 @@ def test_other_command_invoke(runner):
     @click.command()
     @click.pass_context
     def cli(ctx):
-        return ctx.invoke(other_cmd, 42)
+        return ctx.invoke(other_cmd, arg=42)
 
     @click.command()
     @click.argument('arg', type=click.INT)
@@ -17,6 +17,23 @@ def test_other_command_invoke(runner):
     result = runner.invoke(cli, [])
     assert not result.exception
     assert result.output == '42\n'
+
+
+def test_other_command_invoke_invalid_custom_error(runner):
+    @click.command()
+    @click.pass_context
+    def cli(ctx):
+        return ctx.invoke(other_cmd, 42)
+
+    @click.command()
+    @click.argument('arg', type=click.INT)
+    def other_cmd(arg):
+        click.echo(arg)
+
+    result = runner.invoke(cli, [])
+    assert isinstance(result.exception, RuntimeError)
+    assert 'upgrading-to-3.2' in str(result.exception)
+    assert click.__version__ < '5.0'
 
 
 def test_other_command_forward(runner):
@@ -194,3 +211,21 @@ def test_object_propagation(runner):
         result = runner.invoke(cli, ['sync'])
         assert result.exception is None
         assert result.output == 'Debug is off\n'
+
+
+def test_other_command_invoke_with_defaults(runner):
+    @click.command()
+    @click.pass_context
+    def cli(ctx):
+        return ctx.invoke(other_cmd)
+
+    @click.command()
+    @click.option('--foo', type=click.INT, default=42)
+    @click.pass_context
+    def other_cmd(ctx, foo):
+        assert ctx.info_name == 'other_cmd'
+        click.echo(foo)
+
+    result = runner.invoke(cli, [])
+    assert not result.exception
+    assert result.output == '42\n'
